// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component <GenericPluginCreateForm /> should renders correctly when form is submitted 1`] = `
<div
  className="panel-body-inner"
>
  <form
    className="form"
    name="genericPluginsCreateForm"
  >
    <div
      className="form-group-wrapper"
    >
      <div
        className="row-expand"
      >
        <div
          className="col-expand-left"
        >
          <Field
            component={[Function]}
            id="type"
            label="Type"
            name="type"
            placeholder=""
            props={
              Object {
                "isSubmit": true,
              }
            }
            type="text"
          />
        </div>
      </div>
      <div
        className="row-expand"
      >
        <div
          className="col-expand-left"
        >
          <Field
            component={[Function]}
            id="note"
            label="Note"
            name="note"
            props={
              Object {
                "isSubmit": true,
              }
            }
          />
        </div>
      </div>
      <div
        className="row-expand"
      >
        <div
          className="col-expand-left"
        >
          <Field
            component={[Function]}
            id="author"
            label="Author"
            name="author"
            props={
              Object {
                "disabled": true,
              }
            }
          />
        </div>
        <div
          className="col-expand-right"
        >
          <Field
            component={[Function]}
            id="currentDate"
            label="Date"
            name="currentDate"
            props={
              Object {
                "disabled": true,
                "format": "DD-MMM-YYYY",
                "value": 1483228800000,
              }
            }
          />
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`Component <GenericPluginCreateForm /> should renders with props correctly 1`] = `
<div
  className="panel-body-inner"
>
  <form
    className="form"
    name="genericPluginsCreateForm"
  >
    <div
      className="form-group-wrapper"
    >
      <div
        className="row-expand"
      >
        <div
          className="col-expand-left"
        >
          <Field
            component={[Function]}
            id="type"
            label="Type"
            name="type"
            placeholder=""
            props={
              Object {
                "isSubmit": false,
              }
            }
            type="text"
          />
        </div>
      </div>
      <div
        className="row-expand"
      >
        <div
          className="col-expand-left"
        >
          <Field
            component={[Function]}
            id="note"
            label="Note"
            name="note"
            props={
              Object {
                "isSubmit": false,
              }
            }
          />
        </div>
      </div>
      <div
        className="row-expand"
      >
        <div
          className="col-expand-left"
        >
          <Field
            component={[Function]}
            id="author"
            label="Author"
            name="author"
            props={
              Object {
                "disabled": true,
              }
            }
          />
        </div>
        <div
          className="col-expand-right"
        >
          <Field
            component={[Function]}
            id="currentDate"
            label="Date"
            name="currentDate"
            props={
              Object {
                "disabled": true,
                "format": "DD-MMM-YYYY",
                "value": 1483228800000,
              }
            }
          />
        </div>
      </div>
    </div>
  </form>
</div>
`;
